Minicraft+ version 2.2.0

+ Added quests
+ Added obsidian knight as the second boss
+ Added controller support
+ Added limitation to inventories
* Changed the display of world edit
* Changed the structure of resource pack
* Split the images of textures

Minicraft+ version 2.1.0

+ Added achievements
+ Added ability to copy, cut, and paste in menus
+ Added credits menu
+ Added the ability to use some ascii characters in world seed
+ Added ornate obsidian and ornate stone tiles
+ Added raw obsidian and stone tiles
+ Added a totem that will spawn the air wizard
+ Added resource packs
+ Added sound when harvesting plants
+ Re-added sparks
+ Re-added damage particles
+ Re-added item shadows
+ Re-added swimming animation
+ Re-added colored spawners
* Fixed crash when inputting certain characters into the inventory searcher
* Fixed crash when deleting world
* Fixed rendering of stair tiles in sky level
* Fixed rendering of cloud cactus in sky level
* Fixed time rendering for potions not following m:ss format
* Fixed some hits not hitting properly (0 attack damage)
* Made gem tools purple
* Prevented animals and mobs from de-spawning while in view
* Prevented furniture from being pushed over stair tiles
* Shear loses durability when used on sheep
* The world list should now update if copying or renaming worlds in-game
* Resource packs and skins menu now use the standardised menu look
* Pre-releases are now ignored from version check
* Renamed shear to shears
* Saplings should no longer grow if an entity is on it
* Made cloud cactus into an ore you can mine and use
* Fixed air wizard spawner
* Fixed player spawning outside the map
* Fixed localization not being loaded on first launch
- Removed texture packs
- Removed suits
- Removed second air wizard
- Removed option of changing skin in the options display because of a crash

------------------------------------------------------------------------------------------