@@ -131,7 +131,6 @@ public class InputHandler implements KeyListener {
 		keymap.put("SIMPPOTIONEFFECTS", "O"); // Whether to simplify the potion effect display
 		keymap.put("TOGGLEHUD", "F1"); // Whether to hide hide GUI
 		keymap.put("EXPANDQUESTDISPLAY", "L"); // Expands the quest display
-		keymap.put("TOGGLEDEBUG", "F3"); // Toggle fps display
 		keymap.put("INFO", "SHIFT-I"); // Toggle player stats display
 
 		keymap.put("FULLSCREEN", "F11");
@@ -150,24 +149,6 @@ public class InputHandler implements KeyListener {
 			for (Key key: keyboard.values())
 				key.tick(); // Call tick() for each key.
 		}
-	}
-
-	/**
-	 * Check if key has been clicked.
-	 * @param key The key to check.
-	 * @return If it has been clicked.
-	 */
-	public boolean isClicked(String key) {
-		return Game.controlInput.isKeyPressed(key) || getKey(key).clicked;
-	}
-
-	/**
-	 * Check if key is being held down.
-	 * @param key The key being held down.
-	 * @return If the key is being held down.
-	 */
-	public boolean isHeld(String key) {
-		return Game.controlInput.isKeyDown(key) || getKey(key).down;
 	}
 
 	// The Key class.
