@@ -40,7 +40,7 @@ public class PopupDisplay extends Display {
 	public void tick(InputHandler input) {
 		if (callbacks != null) {
 			for (PopupActionCallback callback : callbacks) {
-				if (callback.key == null || input.isClicked(callback.key)) {
+				if (callback.key == null || input.getKey(callback.key).clicked) {
 					if (callback.callback != null && callback.callback.acts(menus[0])) {
 						// This overrides the original #tick check.
 						return;
